[gd_scene load_steps=14 format=2]

[ext_resource path="res://menus/win_menu/win_menu.gd" type="Script" id=1]
[ext_resource path="res://menus/main_menu/skybox.PNG" type="Texture" id=2]
[ext_resource path="res://menus/main_menu/arrow.png" type="Texture" id=3]
[ext_resource path="res://interface/theme/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://menus/win_menu/character_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://menus/win_menu/level_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://interface/sprites/blue_button13.png" type="Texture" id=7]
[ext_resource path="res://characters/player/star_breaker/sprites/res_chr.png" type="Texture" id=8]
[ext_resource path="res://music/Sonic CD - D.A. Garden [JPEU] (HD).ogg" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]

resource_name = "SETUP"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Container/WhiteArrows:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1396, 430 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/WhiteArrows:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2100, 46 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Container/BlackArrowsBottom:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3703, 473 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Container/BlackArrowsBottom:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2100, 46 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Container/BlackArrowsTop:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2474, 284 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Container/BlackArrowsTop:rect_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2100, 46 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CharacterImage:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1370, -218 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Container/MenuItems:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("BlackBox:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]

resource_name = "enter"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Container/WhiteArrows:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( -1396, 430 ), Vector2( -311, -832 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/WhiteArrows:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 2100, 46 ), Vector2( 2100, 1482 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Container/BlackArrowsBottom:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 3703, 473 ), Vector2( 2052, 958 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Container/BlackArrowsBottom:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 2100, 46 ), Vector2( 2100, 337 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Container/BlackArrowsTop:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( -2474, 284 ), Vector2( -690, -174 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Container/BlackArrowsTop:rect_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 2100, 46 ), Vector2( 2100, 319 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CharacterImage:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1370, -218 ), Vector2( 348, -164 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Container/MenuItems:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]

resource_name = "exit"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Container/WhiteArrows:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0, 1 ),
"update": 0,
"values": [ Vector2( -311, -832 ), Vector2( -2010, -825 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/WhiteArrows:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2100, 1482 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Container/BlackArrowsBottom:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 0.25, 0.25, 1 ),
"update": 0,
"values": [ Vector2( 2052, 958 ), Vector2( 2607, 701 ), Vector2( 3312, -253 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Container/BlackArrowsBottom:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 0.25, 0.25, 1 ),
"update": 0,
"values": [ Vector2( 2100, 337 ), Vector2( 2100, 928 ), Vector2( 2100, 46 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Container/BlackArrowsTop:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 0.25, 0.25, 1 ),
"update": 0,
"values": [ Vector2( -690, -174 ), Vector2( -1399, 58 ), Vector2( -1932, 1210 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Container/BlackArrowsTop:rect_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 0.25, 0.25, 1 ),
"update": 0,
"values": [ Vector2( 2100, 319 ), Vector2( 2100, 997 ), Vector2( 2100, 46 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CharacterImage:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 348, -164 ), Vector2( 1112, -158 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Container/MenuItems:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "method"
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_main_menu"
} ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("BlackBox:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]

length = 6.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Container/WhiteArrows:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -311, -832 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/WhiteArrows:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2100, 1482 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Container/BlackArrowsBottom:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2052, 958 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Container/BlackArrowsBottom:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2100, 337 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Container/BlackArrowsTop:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -690, -174 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Container/BlackArrowsTop:rect_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2100, 319 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CharacterImage:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2, 4, 6.1 ),
"transitions": PoolRealArray( -1.56482, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 348, -164 ), Vector2( 348, -170 ), Vector2( 346, -158 ), Vector2( 348, -164 ) ]
}

[node name="WinMenu" type="Node2D"]

script = ExtResource( 1 )

[node name="MainMenuBackground" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1307.0
margin_bottom = 707.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="BlackBox" type="TextureRect" parent="." index="1"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1307.0
margin_bottom = 707.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/SETUP = SubResource( 1 )
anims/enter = SubResource( 2 )
anims/exit = SubResource( 3 )
anims/idle = SubResource( 4 )
blend_times = [  ]

[node name="Container" type="Container" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="WhiteArrows" type="TextureRect" parent="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -311.0
margin_top = -832.0
margin_right = 1789.0
margin_bottom = 650.0
rect_rotation = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="MenuItems" type="VBoxContainer" parent="Container" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_top = 105.0
margin_right = 667.0
margin_bottom = 309.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Visibility" ]

[node name="CharacterLabel" type="Label" parent="Container/MenuItems" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 562.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Character Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="HasClearedLabel" type="Label" parent="Container/MenuItems" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 562.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "has cleared"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="LevelLabel" type="Label" parent="Container/MenuItems" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 103.0
margin_right = 562.0
margin_bottom = 151.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 6 )
text = "Level"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="MainMenuButton" type="TextureButton" parent="Container/MenuItems" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 155.0
margin_right = 562.0
margin_bottom = 204.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
_sections_unfolded = [ "Textures" ]

[node name="BlackArrowsBottom" type="TextureRect" parent="Container" index="2"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2052.0
margin_top = 958.0
margin_right = 4152.0
margin_bottom = 1295.0
rect_rotation = 175.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 2
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="BlackArrowsTop" type="TextureRect" parent="Container" index="3"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -690.0
margin_top = -174.0
margin_right = 1410.0
margin_bottom = 145.0
rect_rotation = -5.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 2
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="CharacterImage" type="TextureRect" parent="." index="4"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 284.0
margin_top = -196.0
margin_right = 2340.0
margin_bottom = 1893.0
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Music" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 9 )
volume_db = 0.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="Tween" type="Tween" parent="." index="6"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0


